--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,4 +1,2 @@
-* Вы используете плагин "Отслеживание доставки"? Теперь вы можете самостоятельно настраивать отслеживание доставки заказов.
-* Раньше при открытии раздела "Самые продаваемые" в вашем магазине иногда появлялась ошибка “Невозможно загрузить содержимое”, которая иронически указывала на то, что само наше приложение не имело шансов попасть в такую категорию. Теперь эта проблема в прошлом.
-* Если вы когда-либо пробовали воспользоваться средством "Выбор магазина", но не могли продолжить работу после входа, то можете больше об этом не беспокоиться.
-* Иногда приложение давало сбой при медленном интернет-соединении. Теперь такого не бывает, потому что слабый WiFi бизнесу не помеха.
+* Увеличен размер шрифта на экране входа.
+* Локализованы даты на странице информации о заказе.
