--- a/fastlane/metadata/zh-Hans/release_notes.txt
+++ b/fastlane/metadata/zh-Hans/release_notes.txt
@@ -1,4 +1,2 @@
-*您是否使用“配送跟踪”插件？您现在可以在订单中手动添加“配送跟踪”。
-*尝试查看商店的“效果最好的产品”时，有时会收到一条“无法加载内容”的错误信息，这是该应用程序的的一个小缺陷。这个问题现已解决。
-*您尝试使用“商店选择器”时，在登录后无法继续操作，该问题也已解决。
-*当网速较慢时，该应用程序偶尔会崩溃。现在应用程序不会再崩溃，因为不稳定的无线网络不应该妨碍您管理业务。
+* 我们现在支持在登录屏幕上使用更大的字体。
+*“订单详细信息”屏幕上的日期现在已本地化。
