--- a/fastlane/metadata/id/release_notes.txt
+++ b/fastlane/metadata/id/release_notes.txt
@@ -1,4 +1,2 @@
-* Apakah Anda menggunakan plugin Pelacakan Pengiriman? Sekarang Anda bisa menambahkan pelacakan pengiriman ke pesanan secara manual.
-* Terkadang saat mencoba melihat Performa Tertinggi toko, Anda mendapati error “Tidak dapat memuat konten”, yang ini justru merupakan sebuah kekurangan yang ironis dari performa teratas di bagian aplikasi. Sekarang sudah diperbaiki.
-* Jika Anda pernah mencoba menggunakan Pemilih Toko namun tidak bisa lanjut setelah login, masalah ini juga sudah diperbaiki.
-* Terkadang, aplikasi mengalami crash saat koneksi jaringan sedang lambat. Sekarang tidak lagi, karena seharusnya bisnis Anda tidak boleh terganggu hanya karena wifi yang tidak stabil.
+* Kini mendukung ukuran font yang lebih besar di layar login.
+* Tanggal pada layar Detail Pesanan kini telah dilokalkan.
