--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,4 +1,2 @@
-* 你是否會使用「貨件追蹤」外掛程式？你現在可為訂單手動新增貨件追蹤功能。
-* 有時候嘗試檢視商店的「最佳執行者」時，你會看到「無法載入內容」錯誤，對應用程式可謂缺乏頂尖效能的一大諷刺。我們現已修正此問題。
-* 若你曾嘗試使用「商店挑選器」，但在登入後無法繼續操作，我們也已修正此問題。
-* 應用程式有時會在網路連線緩慢時當機。現在不會有此問題了，因為絕不能讓不穩定的 WiFi 成為你管理業務的絆腳石。
+* 我們現在已於登入畫面中支援更大的字體了。
+* 訂單詳細資料畫面上的日期目前已完成本地化。
