--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,6 +1,7 @@
 2.1
 -----
 - improvement: improved support for RTL languages in the Dashboard
+- enhancement: You can now view product images on orders. Tapping on Products in Orders will present a view-only version of the Product's Details.
  
 2.0
 -----
